[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprite/enemies/E_00/E_00_sprite.png" type="Texture" id=1]
[ext_resource path="res://script/E_00.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.6
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle_Re"
length = 0.6
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Stand"
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 2 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 7.68373

[sub_resource type="CircleShape2D" id=5]
radius = 2.5893

[node name="E_00" type="Area2D" groups=[
"Enemy",
]]
scale = Vector2( 2, 2 )
z_index = 1
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Idle_Re = SubResource( 2 )
anims/Stand = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 11

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.47194 )
shape = SubResource( 4 )
one_way_collision_margin = 0.0

[node name="check_ground" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="check_ground"]
position = Vector2( 0, 13.1319 )
shape = SubResource( 5 )
[connection signal="body_entered" from="." to="." method="_on_E_00_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_E_00_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="check_ground" to="." method="_on_check_ground_body_entered"]
[connection signal="body_exited" from="check_ground" to="." method="_on_check_ground_body_exited"]
